k8s-objects/k8s-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: build

---
apiVersion: v1
kind: Namespace
metadata:
  name: build-workflows

---
apiVersion: v1
kind: Namespace
metadata:
  name: data

---
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
