k8s-objects/ingress-plane.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: lets-encrypt
  labels:
    app: plane
  name: plane
  namespace: plane
spec:
  ingressClassName: nginx
  rules:
  - host: plane.galluman.com
    http:
      paths:
      - backend:
          service:
            name: plane-ce-web
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-api
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-api
            port:
              number: 8000
        path: /auth
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-live
            port:
              number: 3000
        path: /live/
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-space
            port:
              number: 3000
        path: /spaces
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-admin
            port:
              number: 3000
        path: /god-mode
        pathType: Prefix
      - backend:
          service:
            name: plane-ce-minio
            port:
              number: 9000
        path: /uploads
        pathType: Prefix
  tls:
  - hosts:
    - plane.galluman.com
    secretName: plane-ingress-tls
